WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61869
[Qt] Fix the Phonon build when logging is disabled
https://bugs.webkit.org/show_bug.cgi?id=61869
Summary
[Qt] Fix the Phonon build when logging is disabled
Andras Becsi
Reported
2011-06-01 09:50:55 PDT
When building without qt-mobility using Phonon as media back-end the build fails with "variable set but not used" errors because of -Werror=unused-but-set-variable. These variables are only used by unguarded LOG calls, which need "#if !LOG_DISABLED" guards.
Attachments
proposed fix
(3.51 KB, patch)
2011-06-01 09:52 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2011-06-01 09:52:58 PDT
Created
attachment 95616
[details]
proposed fix
WebKit Commit Bot
Comment 2
2011-06-01 11:16:26 PDT
Comment on
attachment 95616
[details]
proposed fix Clearing flags on attachment: 95616 Committed
r87828
: <
http://trac.webkit.org/changeset/87828
>
WebKit Commit Bot
Comment 3
2011-06-01 11:16:31 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 4
2011-06-03 14:01:17 PDT
Revision
r87828
cherry-picked into qtwebkit-2.2 with commit 875e920 <
http://gitorious.org/webkit/qtwebkit/commit/875e920
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug