2011-06-01  Andras Becsi  <abecsi@webkit.org>

Reviewed by Csaba Osztrogonác.

        [Qt] Fix the Phonon build when logging is disabled
        https://bugs.webkit.org/show_bug.cgi?id=61869

        No new tests needed.

        * platform/graphics/qt/MediaPlayerPrivatePhonon.cpp: Add missing guards.
        (WebCore::MediaPlayerPrivatePhonon::networkState):
        (WebCore::MediaPlayerPrivatePhonon::readyState):
        (WebCore::MediaPlayerPrivatePhonon::updateStates):
        (WebCore::MediaPlayerPrivatePhonon::stateChanged):

Canonical link: https://commits.webkit.org/77305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87828 268f45cc-cd09-0410-ab3c-d52691b4dbfc